# smriti-memcore

./: .gitignore  AMP_CONFORMANCE_PLAN.md  CHANGELOG.md  README.md  install_smriti_mcp.sh  pyproject.toml  server.json
.github/workflows/: publish-mcp.yml
benchmarks/: bench_ccr.py  bench_hybrid_search.py  longmem_eval.py  test_fidelity.py
docs/: headroom_integration_analysis.md
docs/superpowers/plans/: 2026-05-16-private-rooms.md  2026-05-20-smarter-recall.md
docs/superpowers/specs/: 2026-05-20-smarter-recall-design.md
results/: longmemeval_results.json
scripts/: bench_recall.py  bump_version.py
smriti-antigravity-plugin/: plugin.json
smriti-antigravity-plugin/skills/smriti-best-practices/: SKILL.md
smriti_memcore/: consolidation.py  core.py  fts_index.py  llm_interface.py  metrics.py  models.py  palace.py  query_rewriter.py  retrieval.py  snippet.py  working_memory.py
smriti_memcore/compressors/: __init__.py  code_crusher.py  json_crusher.py  router.py
smriti_memcore/integrations/: install.py  mcp_server.py
tests/: test_ccr_integration.py  test_compressors.py  test_fts_index.py  test_mcp_server.py  test_models.py  test_palace.py  test_query_rewriter.py  test_snippet.py  test_visibility.py
